Add title & icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="description" content="Browser simple cliker">
   <meta name="keywords" content="HTML,CSS,JavaScript,Ningaro">
   <meta name="author" content="Ningaro">
+
+  <title>Browser Cliker</title>
+
+  <!-- ICON -->
+  <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/main.css">
