--- a/index.html
+++ b/index.html
@@ -18,15 +18,10 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <h3>Counter: <div class="count">0</div></h3>
+      <h1 class="counter-text">Counter: <div class="count">0</div>  </h1>
       <div class="col" id="pos-1">
         <div class="bg-danger click-bl"></div>
       </div>
-      <div class="col" id="pos-2"></div>
-      <div class="col" id="pos-3"></div>
-      <div class="col" id="pos-4"></div>
-      <div class="col" id="pos-5"></div>
-      <div class="col" id="pos-6"></div>
     </div>
   </div>
 
@@ -36,8 +31,6 @@
   <script src="assets\js\bootstrap.min.js"></script>
   <!-- Custom JS -->
   <script>
-    var NowPos;
-    var NewPos;
     var WhatIsCount = 0;
 
     function getRandom(min, max) {
@@ -47,15 +40,10 @@
     $('body').on("click", ".click-bl", function() {
       WhatIsCount = WhatIsCount + 1;
       $('.count').html(WhatIsCount);
-      NowPos = '#' + $(this).parent().attr("id");
-      $(NowPos).html('');
-      NewPos = "#pos-" + getRandom(1, 7);
-      $(NewPos).html('<div class="bg-danger click-bl"></div>');
       $('.click-bl').css({
-        top: getRandom(1,10) + "0%",
-        left: getRandom(1,10) + "0%"
+        top: getRandom(2, 10) + "0%",
+        left: getRandom(1, 10) + "0%"
       });
-      console.log('End');
     });
   </script>
 </body>
