--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       //Проверка на первый клик
       if (GameStatus == 0) {
 
-        $(".Timer").html('\n Timer: <div class="timer-time">15.0</div>')
+        $(".timer").html('\n Timer: <div class="timer-time">15.0</div>')
 
         //Установка таймера
         var timerId = setInterval(function() {
