Some fix :rage3:

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <meta name="description" content="Browser simple cliker">
+  <meta name="description" content="Browser simple clicker">
   <meta name="keywords" content="HTML,CSS,JavaScript,Ningaro">
   <meta name="author" content="Ningaro">
 
 
-  <title>Browser Cliker</title>
+  <title>Browser Clicker</title>
 
   <!-- ICON -->
   <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
